--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 <div class="feature-row">
                     <div class="feature-content glass">
                         <div class="feature-icon">🧠</div>
-                        <h3>brain stuff</h3>
-                        <p>i do some fancy stuff here, prob too much caffeine involved. placeholder text cuz im lazy.</p>
+                        <h3>big brain frfr</h3>
+                        <p>not me</p>
                     </div>
                     <div class="feature-visual glass"></div>
                 </div>
