had to fix contact button on pc

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li><a href="#showcase">Projects</a></li>
                 <li><a href="#timeline">Career</a></li>
                 <li><a href="#contact">Socials</a></li>
-                <li><a type="mailto:colin@ches.dev" target="_blank" class="external-link">Contact</a></li>
+                <li><a href="mailto:colin@ches.dev" target="_blank" class="external-link">Contact</a></li>
 </ul>
             </ul>
             <div class="mobile-menu-toggle">
